# package

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/cgpa/: module.py
src/panimalar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rollno/: module.py
tests/: test_cgpa.py  test_module.py  test_rollno.py
