[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "panimalar"
version = "0.2.2"
authors = [
    { name="The Coding Society", email="codingsociety@psdc.org.in"},
    { name="aviiciii (Laaveshwaran Parthiban)", email="laavesh1@gmail.com" },
]
description = "A package of function created by and for The Coding Society, Panimalar Engineering College"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "regex>=2022.10.31",
]



[project.urls]
"Homepage" = "https://github.com/thecoding-society/package"
"Bug Tracker" = "https://github.com/thecoding-society/package/issues"